Tests findAll UserController